fix: vertical-align: middle to code

--- a/root/assets/css/markdown.css
+++ b/root/assets/css/markdown.css
@@ -84,6 +84,7 @@
 	display: inline-block;
 	word-break: break-word;
     overflow-x: auto;
+	vertical-align: middle;
 }
 
 blockquote {
